# mastermind

./: CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md
apps/: CMakeLists.txt  distribution_study.cpp
docs/: developer.md  distribution_study.txt  examples.md  quick_start.md
src/core/: CMakeLists.txt  code.h  code_util.cpp  code_util.h
src/solver/: CMakeLists.txt  solver.h
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  code_util_test.cpp
tests/solver/: CMakeLists.txt  solver_test.cpp
